#1 - Configuração e estruturação do projeto.
a) Estrutura:
1. (pom.xml) - Definição do projeto, declaração dos módulos do Spring, etc.
2. (README.md) - Contém todo o 'banner' do projeto.

b) Configuração:
1. (settings_template.xml) - Template de configuração do Maven, adaptado para o projeto.
2. (.gitignore) - Configuração mínima de regras para ignorar do GIT, arquivos e diretórios do projeto.

c) Recursos:
1. (application-h2.properties, application-postgresql.properties) - Configurações para os databases disponíveis.
2. (application.properties) - Configurações gerais.
3. (schema-postgresql.sql) - Script de criação do banco, executado em todo Start da aplicação.
4. (data-postgresql.sql) - Script de população para o schema citado anteriormente, executado em todo Startup da aplicação.

d) Imagens:
1. (*.jpg) - Imagens utilizadas no 'README.md'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Arquivos/Diretórios de configuração e/ou utilitários do projeto
+# Arquivo de configuração pessoal do projeto
 personal-config/
-settings-maven-*.xml
 
 # Arquivos do IntelliJ
 *.iml
