--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0-jre</version>
+        </dependency>
+
         <!-- Tests -->
 
         <dependency>
