--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <version>2.1.2.RELEASE</version>
     </parent>
 
     <groupId>br.com.cattany.study</groupId>
@@ -25,8 +25,8 @@
         </perfis.ativo.spring.boot>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jupiter.version>5.3.1</jupiter.version>
-        <junit-platform.version>1.3.1</junit-platform.version>
+        <junit-jupiter.version>5.3.2</junit-jupiter.version>
+        <junit-platform.version>1.3.2</junit-platform.version>
     </properties>
 
     <developers>
