Melhoria no settings_template, flexibilizando mais algumas configurações
a) Parametrizações no template:
- spring.jpa.hibernate.ddl-auto
- spring.datasource.initialization-mode

b) Configuração nova:
- spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults

--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -12,4 +12,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/@database.name@
 
 # Faz com que os arquivos 'schema-postgresql.sql' e 'data-postgresql.sql' sejam executados no startup.
 spring.datasource.platform=postgresql
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=@spring.datasource.initialization-mode@
