--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ server.port=@app.port.usuario@
 
 ############################# JPA #############################################
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=@spring.jpa.hibernate.ddl-auto@
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 ############################# DATASOURCE ######################################
 
